--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "fullcalendar": "^6.1.15",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18"
