--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "fullcalendar": "^6.1.15",
     "next": "14.2.7",
     "react": "^18",
+    "react-calendly": "^4.3.1",
     "react-dom": "^18"
   },
   "devDependencies": {
