--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@stripe/stripe-js": "^4.5.0",
     "fullcalendar": "^6.1.15",
     "next": "14.2.7",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "stripe": "^16.11.0"
   },
   "devDependencies": {
     "eslint": "^8",
