--- a/package.json
+++ b/package.json
@@ -14,14 +14,11 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
-    "@reduxjs/toolkit": "^2.2.7",
     "fullcalendar": "^6.1.15",
     "next": "14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-redux": "^9.1.2",
-    "react-speech-kit": "^3.0.1",
-    "redux": "^5.0.1"
+    "react-speech-kit": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
