--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
     "luxon": "^3.5.0",
     "next": "14.2.7",
     "react": "^18",
+    "react-calendly": "^4.3.1",
     "react-dom": "^18",
-    "react-speech-kit": "^3.0.1",
-    "react-calendly": "^4.3.1"
+    "react-speech-kit": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
@@ -31,4 +31,3 @@
     "tailwindcss": "^3.4.1"
   }
 }
-
