--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "fullcalendar": "^6.1.15",
+    "gsap": "^3.12.5",
+    "jspdf": "^2.5.2",
     "luxon": "^3.5.0",
     "next": "14.2.7",
     "react": "^18",
+    "react-calendly": "^4.3.1",
     "react-dom": "^18",
-    "react-speech-kit": "^3.0.1",
-    "react-calendly": "^4.3.1"
+    "react-speech-kit": "^3.0.1"
   },
   "devDependencies": {
     "eslint": "^8",
@@ -31,4 +33,3 @@
     "tailwindcss": "^3.4.1"
   }
 }
-
