--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react": "^18",
     "react-calendly": "^4.3.1",
     "react-dom": "^18",
-    "react-speech-kit": "^3.0.1"
+    "react-speech-kit": "^3.0.1",
+    "stripe": "^16.12.0"
   },
   "devDependencies": {
     "eslint": "^8",
