--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jspdf": "^2.5.2",
     "luxon": "^3.5.0",
     "next": "14.2.7",
+    "next-auth": "^5.0.0-beta.21",
     "react": "^18",
     "react-calendly": "^4.3.1",
     "react-dom": "^18",
