--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18",
     "react-calendly": "^4.3.1",
     "react-dom": "^18",
+    "react-otp-input": "^3.1.1",
     "react-speech-kit": "^3.0.1",
     "stripe": "^16.12.0"
   },
