--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "stripe": "^16.12.0"
   },
   "devDependencies": {
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.7",
     "postcss": "^8",
