--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fullcalendar/interaction": "^6.1.15",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@reduxjs/toolkit": "^2.3.0",
     "@stripe/stripe-js": "^4.5.0",
     "fullcalendar": "^6.1.15",
     "gsap": "^3.12.5",
@@ -26,6 +27,7 @@
     "react-calendly": "^4.3.1",
     "react-dom": "^18",
     "react-otp-input": "^3.1.1",
+    "react-redux": "^9.1.2",
     "react-speech-kit": "^3.0.1",
     "stripe": "^16.12.0"
   },
