--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-otp-input": "^3.1.1",
     "react-redux": "^9.1.2",
     "react-speech-kit": "^3.0.1",
+    "redux-persist": "^6.0.0",
     "stripe": "^16.12.0"
   },
   "devDependencies": {
